--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,3 +1,32 @@
-// -----------------------------------------------------------------------------
-// This file contains all styles related to the footer of the site/application.
-// -----------------------------------------------------------------------------
+
+.footer {
+    &--wrapper{
+        background-color: gray;
+        >div{
+            >img{
+                width: 12rem;
+                margin: 0 auto 0 0;
+            }
+        }
+    }
+    &--links{
+        display: flex;
+        justify-content: space-around;
+        >section{
+            padding: 3rem 0;
+            >h3{
+                color: rgb(255, 81, 0);
+                margin-top: 0;
+            }
+            >li{
+                list-style: none;
+                >a{
+
+                }
+            }
+        }
+    }
+    margin-top: $spacing-lg;
+    text-align: center;
+}
+
