--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,6 +8,8 @@
 
 // 2. Vendors
 @import
+  'vendors/font',
+  'vendors/grid',
   'vendors/normalize';
 
 // 3. Base stuff
@@ -19,16 +21,20 @@
 
 // 4. Layout-related sections
 @import
+  'layout/features',
   'layout/header',
-  'layout/footer';
+  'layout/footer',
+  'layout/hero';
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/image';
 
 // 6. Page-specific styles
 @import
-  'pages/home';
+  'pages/home',
+  'pages/contact.scss';
 
 // 7. Themes
 @import
