--- a/src/style/pages/_home.scss
+++ b/src/style/pages/_home.scss
@@ -1,3 +1,23 @@
-// -----------------------------------------------------------------------------
-// This file contains styles that are specific to the home page.
-// -----------------------------------------------------------------------------
+@media(min-width: 875px) {
+  .hero{
+    &__content{
+      >ul {
+  
+        >li {
+  
+          >small {
+          font-size: 1.4rem;
+          }
+  
+          >strong {
+          font-size: 1.6rem;
+          }
+  
+          >p {
+            font-size: 1.5rem;
+          }
+        }
+      }
+    }
+  }
+}
