created home, contact and about us page

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -2,6 +2,8 @@
 $primary: #020000;
 $gray: #555555;
 $whitish: #f2f2f2;
+$orange: rgb(255, 81, 0);
+$orange-hover: rgb(213, 68, 0);
 
 // Font-size
 $text-sm: .85rem;
@@ -25,4 +27,7 @@ $spacing-lg: 2.5rem;
   padding: 0 1rem;
   max-width: 110rem;
   margin: auto; 
+}
+.container{
+  margin: 6rem 0;
 }
