--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -34,7 +34,8 @@
 // 6. Page-specific styles
 @import
   'pages/home',
-  'pages/contact.scss';
+  'pages/contact.scss',
+  'pages/about-us.scss';
 
 // 7. Themes
 @import
