--- a/src/style/layout/_hero.scss
+++ b/src/style/layout/_hero.scss
@@ -1,12 +1,14 @@
 .hero {
-    display: flex;
+    width: fit-content;
+    @media (min-width: 875px) {
+        display: flex;
+    }
     margin: $spacing-base auto $spacing-base;
     max-width: 1920px;
 
     &__decoration {
         &__image {
             width: 100%;
-            height: 100%;
             object-fit: cover;
             object-position: center;
         }
@@ -15,18 +17,23 @@
     &__content {
         background-color: $whitish;
         padding: $spacing-base $spacing-lg;
+        flex-direction: column;
+        display: flex;
+        align-items: center;
 
         &__list {
             list-style: none;
             padding: 0;
-
+            display: flex;
+            flex-direction: column;
+            align-content: space-around;
+            margin: auto;
             &__item {
-                margin-bottom: $spacing-lg;
+                margin: 1rem 0;
 
                 &__text {
                     font-size: $text-sm;
                     color: $gray;
-                    max-width: 250px;
                 }
             }
         }
@@ -34,5 +41,10 @@
 
     &__btn {
         margin-bottom: 1rem;
+    }
+    >img{
+        width: unset;
+        margin-right: 0;
+        max-width: 100%;
     }
 }
