--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -1,18 +1,25 @@
 .contact{
+  background-color: white;
+  padding: 2rem;
+  border-radius: 50px;
+  box-sizing: border-box;
   &--page{
-    background-color: white;
-    padding: 2rem;
-    border-radius: 50px;
-    box-sizing: border-box;
-    >h2 {
-      color: rgb(255, 81, 0);
+
+    &--block{
       @media (min-width: 875px) {
+        display: flex;
       }
-    }
-    >p {
-      width: 70%;
-      @media (min-width: 875px) {
-    width: 90%;
+      height: 25rem;
+      &--info{
+      width: 50%;
+      height: 50%;
+      background-color: $orange;
+      }
+      &--fields{
+      width: 50%;
+      height: 50%;
+      box-sizing: border-box;
+      border: 4px solid $orange;
       }
     }
   }
