--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -35,7 +35,8 @@
 @import
   'pages/home',
   'pages/contact.scss',
-  'pages/about-us.scss';
+  'pages/about-us.scss',
+  'pages/news.scss';
 
 // 7. Themes
 @import
