--- a/src/style/pages/_contact.scss
+++ b/src/style/pages/_contact.scss
@@ -11,15 +11,56 @@
       }
       height: 25rem;
       &--info{
+        display: flex;
+    align-items: center;
       width: 50%;
       height: 50%;
       background-color: $orange;
+      ul{
+        display: flex;
+        flex-direction: column;
+        margin: auto;
+        justify-content: space-evenly;
+        height: 100%;
+        li{
+          list-style: none;
+          a{
+            color: black;
+          }
+        }
+      }
       }
       &--fields{
       width: 50%;
       height: 50%;
       box-sizing: border-box;
       border: 4px solid $orange;
+      form{
+        height: 100%;
+        section{
+          input{
+          border: 2px solid $orange;
+          }
+        }
+      }
+      &--info{
+        display: flex;
+        flex-wrap: wrap;
+        height: 50%;
+        input{
+          box-sizing: border-box;
+          width: 50%;
+          height: 50%;
+        }
+      }
+      &--message{
+        height: 50%;
+        input{
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+        }
+      }
       }
     }
   }
