--- a/views/_includes/_components/footer.njk
+++ b/views/_includes/_components/footer.njk
@@ -1,32 +1,33 @@
-<div class="footer--wrapper">
+<div class="footer--wrapper wrapper">
 <div>
 <img src="../assets/img/logo.png">
+<ul class="footer--links wrapper">
+  <section>
+    <h3>Our socials</h3>
+    <li><a href="https://www.facebook.com/" target="_blank">Facebook</a></li>
+    <li><a href="https://www.instagram.com/" target="_blank">Instagram</a></li>
+    <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+    <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
+  </section>
+
+  <section>
+    <h3>Legal</h3>
+    <li><a href="">Release notes</a></li>
+    <li><a href="">Legal and Cookies</a></li>
+    <li><a href="">Terms of Use</a></li>
+    <li><a href="">Do Not Sell My Personal Information</a></li>
+  </section>
+
+  <section>
+    <h3>Other pages</h3>
+    <li><a href="../../index.html">Home</a></li>
+    <li><a href="../../news/index.html">News</a></li>
+    <li><a href="../contact/index.html">Contact</a></li>
+    <li><a href="../about-us/index.html">About us</a></li>
+  </section>
+
+</ul>
 </div>
-  <ul class="footer--links wrapper">
-    <section>
-      <h3>footer title</h3>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-    </section>
 
-    <section>
-      <h3>footer title</h3>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-    </section>
-
-    <section>
-      <h3>footer title</h3>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-      <li><a>footer content</a></li>
-    </section>
-
-  </ul>
 </div>
 Copyright {{ helpers.currentYear() }} @ Nick Roofthooft
