--- a/views/contact.njk
+++ b/views/contact.njk
@@ -11,10 +11,25 @@ eleventyNavigation:
         <h2>need support? contact us personaly!</h2>
         <div class="contact--page--block">
             <div class="contact--page--block--info" >
-
+            <ul>
+            <li><a href="">123456789</a></li>
+            <li><a href="">Go-Hike@gmail.com</a></li>
+            <li><a href="">Some place</a></li>
+            <li><a href="">Some website</a></li>
+            </ul>
             </div>
             <div class="contact--page--block--fields">
-
+            <form>
+                <section class="contact--page--block--fields--info">
+                    <input type="text" name="" id="" required placeholder="Name">
+                    <input type="text" name="" id="" placeholder="Lastname">
+                    <input type="text" name="" id="" required placeholder="E-mail">
+                    <input type="text" name="" id="" placeholder="Phone-Number">
+                </section>
+                <section class="contact--page--block--fields--message">
+                    <input type="text" placeholder="Type your message...">
+                </section>
+            </form>
             </div>
         </div>
     </div>
