--- a/src/style/layout/_footer.scss
+++ b/src/style/layout/_footer.scss
@@ -1,8 +1,14 @@
 
 .footer {
     &--wrapper{
+        display: flex;
+        justify-content: space-around;
         background-color: gray;
         >div{
+            @media (min-width: 875px) {
+                
+                display: flex;
+            }
             >img{
                 width: 12rem;
                 margin: 0 auto 0 0;
@@ -11,7 +17,7 @@
     }
     &--links{
         display: flex;
-        justify-content: space-around;
+        // justify-content: space-around;
         >section{
             padding: 3rem 0;
             >h3{
@@ -21,7 +27,7 @@
             >li{
                 list-style: none;
                 >a{
-
+                    word-break: break-all;
                 }
             }
         }
