--- a/views/index.njk
+++ b/views/index.njk
@@ -42,6 +42,7 @@ eleventyNavigation:
 
     <section class="features wrapper container">
 
+
         {% for feature in features %}
         <article class="features--article wrapper">
             <div class="features--img">
@@ -55,7 +56,7 @@ eleventyNavigation:
             <div class="features--content">
                 <strong class="features--content--title">{{ feature.title }}</strong>
                 <p class="features--content--text">{{ feature.desc }}</p>
-                <button class="features--content--cta">More about this feature</button>
+                <button class="features--content--cta"><a href={{ feature.link }}>More about this feature</a></button>
             </div>
         </article>
         {% endfor %}
@@ -130,21 +131,5 @@ eleventyNavigation:
         {% endfor %}
     </ul>
 
-</section>
-{% endif %}
-
-{% if collections.features | length %}
-<section class="container wrapper">
-    <h2 class="subtitle">Features</h2>
-
-    {% for feature in collections.features %}
-    <ul>
-        <li>
-            <a href="{{ feature.url }}">
-                {{ feature.data.title }}
-            </a>
-        </li>
-    </ul>
-    {% endfor %}
 </section>
 {% endif %}
