--- a/views/_includes/_components/header.njk
+++ b/views/_includes/_components/header.njk
@@ -3,7 +3,7 @@
 <header>
   <div class="header wrapper">
   <figure class="logo wrapper">
-    <img src="../assets/img/logo.png" alt="">
+    <img src="../../assets/img/logo.png" alt="">
   </figure>
         <nav class="navbar wrapper">
             <ul class="navbar--list">
@@ -24,6 +24,6 @@
         </nav>
     </div>
         <a class="hero-image--horizontal">
-            <img src="../../assets/img/banner.jpg" alt="...">
+            <img src="../../../assets/img/banner.jpg" alt="...">
         </a>
 </header>
