--- a/views/contact.njk
+++ b/views/contact.njk
@@ -6,7 +6,7 @@ eleventyNavigation:
     order: 3
 ---
 <main class="contact">
-    <h1>{{ title }}</h1>
+    <h1 class="title">{{ title }}</h1>
     <div class="contact--page wrapper">
         <h2>need support? contact us personaly!</h2>
         <div class="contact--page--block">
