--- a/views/features/Hikes.njk
+++ b/views/features/Hikes.njk
@@ -2,6 +2,7 @@
 layout: features
 tags: features
 title: GPS
+desc: Find thousands of hikes ranging from any distance, solo hikes or with a guide!
 ---
 
 GPS Feature
