--- a/views/features/socials.njk
+++ b/views/features/socials.njk
@@ -2,5 +2,6 @@
 layout: features
 tags: features
 title: Socials
+desc: Make new friends who also like to hike, add them and chat with them!
 ---
 Socials Feature
