--- a/views/_includes/_components/footer.njk
+++ b/views/_includes/_components/footer.njk
@@ -1,6 +1,6 @@
 <div class="footer--wrapper wrapper">
 <div>
-<img src="../assets/img/logo.png">
+<img src="../../assets/img/logo.png">
 <ul class="footer--links wrapper">
   <section>
     <h3>Our socials</h3>
