--- a/views/about-us.njk
+++ b/views/about-us.njk
@@ -7,7 +7,7 @@ eleventyNavigation:
 ---
 
 <div class="about-us--page wrapper">
-<h1>Over ons!</h1>
+<h1 class="title">Over ons!</h1>
 
     <h2>Who is Go-Hike?</h2>
     <p>Go-Hike vzw is a unisport federation, recognized and subsidized by Sport Vlaanderen (formerly BLOSO), which
