--- a/views/_includes/_components/featuresComp.njk
+++ b/views/_includes/_components/featuresComp.njk
@@ -1,6 +1,6 @@
 
 {% if features | length %}
-  <h2 class="subtitle wrapper">Features van ons</h2>
+  <h2 class="subtitle wrapper">Our features</h2>
   <section class="features wrapper container">
       {% for feature in features %}
         <article class="features--article wrapper">
