--- a/views/_includes/post.njk
+++ b/views/_includes/post.njk
@@ -9,7 +9,7 @@ layout: base
     </div>
 </div>
 
-<article class="container">
+<article class="container post">
     {{ content | safe }}
 </article>
 
